--- a/src/components/InputGroup/InputGroup.css
+++ b/src/components/InputGroup/InputGroup.css
@@ -37,6 +37,7 @@
   border-bottom: 1px solid var(--color-brand);
   outline: none;
   width: 100%;
+  font-size: 0.8rem;
 }
 .input-group-input:hover:not(:focus) {
   border-bottom-width: 2px;
